fixed spacing for big area and bag interface

--- a/public/styles.css
+++ b/public/styles.css
@@ -343,18 +343,16 @@ Bag Interface
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: scroll;
   z-index: 100;
 }
 
 .bagArea {
   width: 100%;
   height: 100%;
-  /* border-radius: 12px; */
-  /* box-shadow: 0 0 10px black; */
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content:space-around;
 }
 
 
